[gd_scene load_steps=33 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/gun_shoot.png" type="Texture" id=2]
[ext_resource path="res://player/player_idle.png" type="Texture" id=3]
[ext_resource path="res://player/player_run.png" type="Texture" id=4]
[ext_resource path="res://player/gun_idle.png" type="Texture" id=5]
[ext_resource path="res://player/player_roll.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 50, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 200, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 250, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 350, 0, 50, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 20, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 60, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 20, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 60, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 20, 22 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 20, 22 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "roll",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 9.0
} ]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 50, 30 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 30 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 30 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 50, 30 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 50, 30 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
} ]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "roll"
frame = 6
playing = true

[node name="sprite_gun" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
animation = "shoot"
frame = 1
playing = true

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="bullet_timer" type="Timer" parent="."]
one_shot = true

[node name="fan_timer" type="Timer" parent="."]
one_shot = true

[node name="reload_timer" type="Timer" parent="."]
one_shot = true
